gcc warnings compiling src/solaris/native/sun/security/pkcs11

XMLWordPrintable


        /data/jenkins/workspace/jdk9-dev-build/jdk/src/solaris/native/sun/security/pkcs11/j2secmod_md.c: In function ‘findFunction’:
        /data/jenkins/workspace/jdk9-dev-build/jdk/src/solaris/native/sun/security/pkcs11/j2secmod_md.c:42:9: warning: implicit declaration of function ‘throwNullPointerException’ [-Wimplicit-function-declaration]
        /data/jenkins/workspace/jdk9-dev-build/jdk/src/solaris/native/sun/security/pkcs11/j2secmod_md.c: In function ‘Java_sun_security_pkcs11_Secmod_nssLoadLibrary’:
        /data/jenkins/workspace/jdk9-dev-build/jdk/src/solaris/native/sun/security/pkcs11/j2secmod_md.c:75:9: warning: implicit declaration of function ‘throwIOException’ [-Wimplicit-function-declaration]

              Assignee:
              Alan Bateman
              Reporter:
              Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: