8034856: gcc warnings compiling src/solaris/native/sun/security/pkcs11 8034857: gcc warnings compiling src/solaris/native/sun/management

Reviewed-by: sla, mullan